force-app/main/default/objects/Participation__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Constituent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participations</relationshipLabel>
        <relationshipName>Participations_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Participations</relationshipLabel>
        <relationshipName>Participations_Listing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participate__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Participate</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Participations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Participation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Participation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participations</pluralLabel>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>